# nativeLib

./: build.gradle  proguard-rules.pro
src/main/cpp/: CMakeLists.txt
src/main/cpp/adapter/: adapter.cpp
src/main/cpp/antiJit/: CMakeLists.txt  profile_saver.cpp
src/main/cpp/dlfc/xDL/: version  xdl.cpp  xdl_linker.h  xdl_lzma.cpp
src/main/cpp/hidemaps/: hide_maps_path.cpp
src/main/cpp/hook/: CMakeLists.txt  HookUtils.cpp
src/main/cpp/hook/ShadowHook/src/main/cpp/: CMakeLists.txt  sh_exit.cpp  sh_hub.cpp  sh_jni.cpp  sh_linker.cpp  sh_recorder.cpp  sh_switch.cpp  sh_task.cpp  shadowhook.cpp
src/main/cpp/hook/ShadowHook/src/main/cpp/arch/arm/: sh_inst.cpp
src/main/cpp/hook/ShadowHook/src/main/cpp/common/: bytesig.cpp  sh_errno.cpp  sh_errno.h  sh_log.h  sh_trampo.cpp
src/main/cpp/hook/ShadowHook/src/main/cpp/include/: shadowhook.h
src/main/cpp/includes/: AllInclude.h  HookJavaNativeMethod.h  HookUtils.h  ITracerBase.h  JnitraceForC.h  StringHandler.h  StringHooker.h  TracerBase.h  ZhenxiLog.h  adapter.h  fileUtils.h  getNetLinkerMac.h  hide_maps_path.h  invokePrintf.h  jni_helper.hpp  linkerHandler.h  macros.h  parse.h  pmparser.h  raw_syscall.h  stringHandler.h  stringUtils.h  xdl.h
src/main/cpp/javahook/: CMakeLists.txt  HookJavaNativeMethod.cpp
src/main/cpp/libpath/: libpath.cpp
src/main/cpp/linker/: linkerHandler.cpp
src/main/cpp/netlink/: CMakeLists.txt  getNetLinkerMac.cpp
src/main/cpp/proc_maps_parser/: pmparser.cpp
src/main/cpp/raw_syscall/: CMakeLists.txt  syscall.cpp
src/main/cpp/tracer/: CMakeLists.txt  HookClassUtils.cpp  JnitraceForC.cpp  StringHandler.cpp  StringHooker.cpp  TracerBase.cpp  invokePrintf.cpp  stringHandler.cpp
src/main/cpp/utils/: appUtils.cpp  fileUtils.cpp  parse.cpp  stringUtils.cpp
